# Wizard_Game

./: LICENSE  cards.py  main.py  player.py  requirements.txt  setup.cfg  tox.ini
.github/workflows/: pep8.yaml  test.yaml  test.yml  zip.yaml
src/Wizard_Game/: cards.py  main.py  player.py
tests/: conftest.py  test_cards.py  test_main_unittest.py  test_player.py  test_player_pytest.py
